--- a/front-end/components.json
+++ b/front-end/components.json
@@ -1,17 +1,21 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
-  "rsc": false,
+  "rsc": true,
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/app/globals.css",
-    "baseColor": "stone",
+    "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "src/components/ui/shadcn",
-    "utils": "@/lib/utils"
-  }
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/plate-ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
+  },
+  "url": "https://platejs.org/r"
 }
