--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.4",
+    "@ariakit/react": "^0.4.13",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -32,27 +33,73 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
     "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-toolbar": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@react-pdf/renderer": "^3.1.17",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.11",
     "@tanstack/react-table": "^8.16.0",
     "@types/video-react": "^0.15.4",
+    "@udecode/cn": "^39.0.0",
+    "@udecode/plate-alignment": "^39.0.0",
+    "@udecode/plate-autoformat": "^39.0.0",
+    "@udecode/plate-basic-marks": "^39.0.0",
+    "@udecode/plate-block-quote": "^39.0.0",
+    "@udecode/plate-break": "^39.0.0",
+    "@udecode/plate-caption": "^39.0.0",
+    "@udecode/plate-code-block": "^39.0.0",
+    "@udecode/plate-combobox": "^39.0.0",
+    "@udecode/plate-comments": "^39.0.0",
+    "@udecode/plate-common": "^39.1.8",
+    "@udecode/plate-csv": "^39.1.6",
+    "@udecode/plate-date": "^39.0.0",
+    "@udecode/plate-dnd": "^39.0.0",
+    "@udecode/plate-docx": "^39.1.6",
+    "@udecode/plate-emoji": "^39.0.0",
+    "@udecode/plate-excalidraw": "^39.0.0",
+    "@udecode/plate-floating": "^39.1.6",
+    "@udecode/plate-font": "^39.0.0",
+    "@udecode/plate-heading": "^39.0.0",
+    "@udecode/plate-highlight": "^39.0.0",
+    "@udecode/plate-horizontal-rule": "^39.0.0",
+    "@udecode/plate-indent": "^39.0.0",
+    "@udecode/plate-indent-list": "^39.0.0",
+    "@udecode/plate-juice": "^39.0.0",
+    "@udecode/plate-kbd": "^39.0.0",
+    "@udecode/plate-layout": "^39.0.0",
+    "@udecode/plate-line-height": "^39.0.0",
+    "@udecode/plate-link": "^39.1.9",
+    "@udecode/plate-list": "^39.0.0",
+    "@udecode/plate-markdown": "^39.1.5",
+    "@udecode/plate-media": "^39.0.0",
+    "@udecode/plate-mention": "^39.0.0",
+    "@udecode/plate-node-id": "^39.0.0",
+    "@udecode/plate-reset-node": "^39.0.0",
+    "@udecode/plate-resizable": "^39.1.6",
+    "@udecode/plate-select": "^39.0.0",
+    "@udecode/plate-selection": "^39.1.4",
+    "@udecode/plate-tabbable": "^39.0.0",
+    "@udecode/plate-table": "^39.1.6",
+    "@udecode/plate-toggle": "^39.0.0",
+    "@udecode/plate-trailing-block": "^39.0.0",
+    "@yarnpkg/cli": "^4.5.0",
+    "@yarnpkg/plugin-dlx": "^4.0.0",
     "add": "^2.0.6",
     "animate.css": "^4.1.1",
     "aphrodite": "^2.4.0",
@@ -67,7 +114,7 @@
     "d3-scale": "^4.0.2",
     "d3-time": "^3.1.0",
     "d3-time-format": "^4.1.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.6",
     "draft-js": "^0.11.7",
@@ -82,7 +129,7 @@
     "js-md5": "^0.8.3",
     "js-toml": "^1.0.0",
     "linkedin-api-client": "^0.3.0",
-    "lucide-react": "^0.376.0",
+    "lucide-react": "^0.452.0",
     "mermaid": "^10.9.0",
     "moment": "^2.29.4",
     "monaco-editor": "^0.44.0",
@@ -108,9 +155,11 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-data-table-component": "^7.5.4",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "8.10.1",
     "react-desktop-notification": "^1.0.9",
     "react-device-detect": "^2.2.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone-uploader": "^2.11.0",
@@ -122,6 +171,7 @@
     "react-is": "^18.3.1",
     "react-lazylog": "^4.5.3",
     "react-linkedin-login-oauth2": "^2.0.1",
+    "react-lite-youtube-embed": "^2.4.0",
     "react-logger-lib": "^1.0.5",
     "react-magic": "^0.2.4",
     "react-markdown": "^9.0.0",
@@ -135,12 +185,17 @@
     "react-slot": "^0.1.2",
     "react-spring": "^9.7.3",
     "react-transition-state": "^2.1.1",
+    "react-tweet": "^3.2.1",
     "react-useanimations": "^2.10.0",
     "recharts": "^2.12.7",
     "redux": "^4.2.1",
     "remark-gfm": "^4.0.0",
     "shadcn": "^2.0.8",
     "sheet": "^0.2.0",
+    "slate": "^0.103.0",
+    "slate-history": "^0.109.0",
+    "slate-hyperscript": "^0.100.0",
+    "slate-react": "^0.110.1",
     "styled-components": "5.3.3",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.3.0",
