--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/plugin-debug": "^3.5.2",
+    "@docusaurus/plugin-ideal-image": "^3.5.2",
+    "@docusaurus/plugin-sitemap": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
     "@docusaurus/theme-mermaid": "^3.5.2",
     "@mdx-js/react": "^3.0.0",
