--- a/docs/package.json
+++ b/docs/package.json
@@ -22,6 +22,7 @@
     "@docusaurus/theme-mermaid": "^3.5.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-image-zoom": "^2.0.0",
     "docusaurus-plugin-matomo": "^0.0.8",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
