Fix(#59,#60): Prompts are now available in eache contents page, based on their category. If user click on a AI agent, he's redirected on the corresponding creation page

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -57,6 +58,7 @@
     "@tanstack/react-table": "^8.16.0",
     "@types/video-react": "^0.15.4",
     "@udecode/cn": "^39.0.0",
+    "@udecode/plate-ai": "^40.1.0",
     "@udecode/plate-alignment": "^39.0.0",
     "@udecode/plate-autoformat": "^39.0.0",
     "@udecode/plate-basic-marks": "^39.0.0",
@@ -192,12 +194,13 @@
     "recharts": "^2.12.7",
     "redux": "^4.2.1",
     "remark-gfm": "^4.0.0",
-    "shadcn": "^2.0.8",
+    "shadcn": "^2.1.6",
     "sheet": "^0.2.0",
     "slate": "^0.103.0",
     "slate-history": "^0.109.0",
     "slate-hyperscript": "^0.100.0",
     "slate-react": "^0.110.1",
+    "slider": "^1.0.4",
     "styled-components": "5.3.3",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.3.0",
