--- a/front-end/package.json
+++ b/front-end/package.json
@@ -58,7 +58,7 @@
     "@tanstack/react-table": "^8.16.0",
     "@types/video-react": "^0.15.4",
     "@udecode/cn": "^39.0.0",
-    "@udecode/plate-ai": "^40.1.0",
+    "@udecode/plate-ai": "^40.2.2",
     "@udecode/plate-alignment": "^39.0.0",
     "@udecode/plate-autoformat": "^39.0.0",
     "@udecode/plate-basic-marks": "^39.0.0",
@@ -123,6 +123,7 @@
     "draft-js": "^0.11.7",
     "driver.js": "^1.3.1",
     "emoji-picker-react": "^4.7.10",
+    "eruda": "^3.4.1",
     "fireworks-js": "^2.10.7",
     "graphql": "^16.8.1",
     "html-react-parser": "^5.0.6",
