--- a/front-end/package.json
+++ b/front-end/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.3",
+    "@radix-ui/react-navigation-menu": "^1.2.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -122,6 +124,7 @@
     "dompurify": "^3.0.6",
     "draft-js": "^0.11.7",
     "driver.js": "^1.3.1",
+    "embla-carousel-react": "^8.5.1",
     "emoji-picker-react": "^4.7.10",
     "eruda": "^3.4.1",
     "fireworks-js": "^2.10.7",
@@ -195,7 +198,7 @@
     "recharts": "^2.12.7",
     "redux": "^4.2.1",
     "remark-gfm": "^4.0.0",
-    "shadcn": "^2.1.6",
+    "shadcn": "2.1.6",
     "sheet": "^0.2.0",
     "slate": "^0.103.0",
     "slate-history": "^0.109.0",
