Fix(#97): LinkedIn posts can now be previewed in an almost realistic way

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -42,6 +42,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx",
     "dist/types/**/*.ts",
     ".next/types/**/*.ts"
   ],
