--- a/front-end/package.json
+++ b/front-end/package.json
@@ -33,7 +33,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
     "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -186,6 +186,7 @@
     "react-mermaid2": "^0.1.4",
     "react-moment": "^1.1.3",
     "react-papaparse": "^4.4.0",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.0.18",
     "react-router-dom": "^6.17.0",
     "react-share": "^4.4.1",
