--- a/front-end/package.json
+++ b/front-end/package.json
@@ -64,6 +64,8 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-table": "^8.20.6",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/video-react": "^0.15.8",
     "@udecode/cmdk": "^0.1.1",
     "@udecode/cn": "^42.0.0",
@@ -142,6 +144,9 @@
     "embla-carousel-react": "^8.5.2",
     "emoji-picker-react": "^4.12.0",
     "eruda": "^3.4.1",
+    "filepond": "^4.32.7",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "fireworks-js": "^2.10.8",
     "fzf": "0.5.2",
     "graphql": "^16.10.0",
@@ -189,6 +194,7 @@
     "react-dom": "^19.0.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone-uploader": "^2.11.0",
+    "react-filepond": "^7.1.3",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-i18next": "^15.4.0",
