Fix(#119): Context can now be updated then used in prompts

--- a/back-end/wordpress/plugins/veepdotai/composer.json
+++ b/back-end/wordpress/plugins/veepdotai/composer.json
@@ -7,7 +7,8 @@
         "delight-im/str": "^2.20",
         "ginsen/img-finder": "^4.0",
         "inpsyde/wonolog": "^1.0",
-        "stripe/stripe-php": "^13.3"
+        "stripe/stripe-php": "^13.3",
+        "mustache/mustache": "^2.14"
     },
     "autoload": {
         "psr-4": {
