Fix(#115): Menus can now be ccompletely onfigured in a json object

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -218,6 +218,7 @@
     "react-share": "^5.1.2",
     "react-simple-animate": "^3.5.3",
     "react-slot": "^0.1.2",
+    "react-spreadsheet": "^0.9.5",
     "react-spring": "^9.7.5",
     "react-textarea-autosize": "^8.5.7",
     "react-transition-state": "^2.2.0",
@@ -226,6 +227,7 @@
     "recharts": "^2.15.0",
     "redux": "^5.0.1",
     "remark-gfm": "^4.0.0",
+    "scheduler": "^0.25.0",
     "shadcn": "2.1.8",
     "sheet": "^0.2.0",
     "slate": "^0.112.0",
