--- a/front-end/package.json
+++ b/front-end/package.json
@@ -60,7 +60,7 @@
     "@radix-ui/react-toolbar": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-pdf/renderer": "^4.1.6",
-    "@silevis/reactgrid": "^4.1.15",
+    "@silevis/reactgrid": "^5.0.0-alpha.10",
     "@slate-yjs/react": "^1.1.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
