Fix(#144): configuration fixed

--- a/front-end/src/components/lib/utils-menu-configuration-definition-user copy.json
+++ b/front-end/src/components/lib/utils-menu-configuration-definition-user copy.json
@@ -7,7 +7,9 @@
       "items": [
         { "id": "brand-voice", "itemType": "form", "label": {"f": ["t", "BrandVoice"]}},
         { "id": "editorial-line", "itemType": "form", "label": {"f": ["t", "EditorialLine"]}},
-        { "id": "template", "itemType": "form", "label": {"f": ["t", "Template"]}}
+        { "id": "template", "itemType": "form", "label": {"f": ["t", "Template"]}},
+        { "id": "pdf-export", "itemType": "form", "label": {"f": ["t", "PdfExport"]}},
+        { "id": "spreadsheet", "itemType": "spreadsheet", "label": "Spreadsheet"}
       ]
     }
 ]
