--- a/front-end/package.json
+++ b/front-end/package.json
@@ -164,6 +164,7 @@
     "mermaid": "^11.4.1",
     "moment": "^2.30.1",
     "monaco-editor": "^0.52.2",
+    "monaco-json": "^3.9.0",
     "mui": "^0.0.1",
     "next": "latest",
     "papaparse": "^5.5.1",
@@ -196,6 +197,7 @@
     "react-dom": "^19.0.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone-uploader": "^2.11.0",
+    "react-error-boundary": "^6.0.0",
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
