Fix(#200): Updates to user prefs values

--- a/front-end/src/components/lib/default-user-app-config.json
+++ b/front-end/src/components/lib/default-user-app-config.json
@@ -9,6 +9,9 @@
         "DEFAULT_VIEW": "preview",
         "DEFAULT_PREVIEW_WIDTH": "[500px]",
         "DEFAULT_PREVIEW_HEIGHT": "[200px]"
+    },
+    "BaseCodeEditor": {
+        "WIDTH": 800,
+        "HEIGHT": "50vh"
     }
-
 }
