--- a/front-end/package.json
+++ b/front-end/package.json
@@ -211,6 +211,7 @@
     "react-logger-lib": "^1.0.5",
     "react-magic": "^0.2.4",
     "react-markdown": "^9.0.3",
+    "react-media-library": "^2.0.3",
     "react-mermaid2": "^0.1.4",
     "react-moment": "^1.1.3",
     "react-papaparse": "^4.4.0",
