Fix(#216): Menus are stored in database and user can toggle from static to dynamic menus

--- a/front-end/src/config/menu-definitions/utils-menu-configuration-definition.json
+++ b/front-end/src/config/menu-definitions/utils-menu-configuration-definition.json
@@ -1,30 +1,13 @@
 [
-    { 
-      "id": "context",
-      "title": "Context",
-      "label": "ContextLabel",
-      "itemType": "screen",
-      "items": [
-        { "id": "brand-voice", "itemType": "form", "label": "BrandVoiceLabel"},
-        { "id": "editorial-line", "itemType": "form", "label": "EditorialLineLabel"},
-        { "id": "pdf-export", "itemType": "form", "label": "PdfExportLabel"}
-      ]
-    },
-    { 
-      "id": "templates",
-      "title": "TemplatesTitle",
-      "itemType": "menu",
-      "items": [
-        { "id": "documents", "itemType": "form", "label": "DocumentsLabel"},
-        { "id": "caroussel", "itemType": "form", "label": "CarousselLabel"}
-      ]
-    },
-    { 
-      "id": "data-analysis",
-      "title": "AnalysisTitle",
-      "itemType": "menu",
-      "items": [
-        { "id": "kpi", "itemType": "form", "label": "KpisLabel"}
-      ]
-    }
+  { 
+    "id": "conception",
+    "title": "Conception",
+    "itemType": "menu",
+    "items": [
+      { "id": "menu", "itemType": "form", "label": "MenuLabel"},
+      { "id": "form", "itemType": "form", "label": "FormsLabel"},
+      { "id": "enumeration", "itemType": "form", "label": "EnumerationLabel"},
+      { "id": "spreadsheet", "itemType": "spreadsheet", "label": "SpreadsheetLabel"}
+    ]
+  }
 ]
