--- a/back-end/wordpress/htdocs/.htaccess
+++ b/back-end/wordpress/htdocs/.htaccess
@@ -1,6 +1,9 @@
-#<ifModule mod_headers.c>
+<IfModule mod_headers.c>
 #Header set X-Content-Type-Options nosniff
-#</ifModule>
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
+Header set Access-Control-Allow-Headers "Content-Type, Accept, Origin, X-Requested-With"
+</IfModule>
 
 # BEGIN WordPress
 # Les directives (lignes) entre « BEGIN WordPress » et « END WordPress » sont générées
@@ -17,3 +20,10 @@ RewriteRule . /index.php [L]
 </IfModule>
 
 # END WordPress
+
+# BEGIN enable-cors
+# Les directives (lignes) entre « BEGIN enable-cors » et « END enable-cors » sont générées
+# dynamiquement, et doivent être modifiées uniquement via les filtres WordPress.
+# Toute modification des directives situées entre ces marqueurs sera surchargée.
+
+# END enable-cors
