--- a/front-end/.gitignore
+++ b/front-end/.gitignore
@@ -1,17 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 /.bin/
+
+# local env files
 /.env.*
+/.local
 
 /versions/
 
-/dist/
-/dist.old/
-
 # dependencies
-/node_modules
-/node_modules*
-/.pnp
+node_modules
+node_modules*
+.pnp
 .pnp.js
 
 # testing
@@ -20,6 +20,8 @@
 # next.js
 /.next/
 /out/
+/dist/
+/dist.old/
 
 # production
 /build
@@ -33,8 +35,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# docker
+# docker/docker-db/volume-db
+**/docker-db/volume-db
